@@ -11,7 +11,8 @@ enum QueryType: string {
     case SELECT = "SELECT";
     case INSERT = "INSERT";
     case UPDATE = "UPDATE";
-
+    case DELETE = "DELETE";
+    case COUNT = "COUNT";
 }
 
 final class DataSlave {
@@ -97,10 +98,17 @@ final class DataSlave {
      * 
      * @return string The constructed query string.
      */
-    private function buildQuery(QueryType $type, string $table, array $cols, array $cond = []): string {
+    private function buildQuery(QueryType $type, string $table, array $cols, array $cond = [], string $orderBy = "", int $limit = 0, int $offset = 0): string {
         $q = "";
         if($type == QueryType::SELECT) {
             $q = "SELECT " . implode( ",", $cols) . " FROM " . $table;
+            if(!empty($cond)) $q .= " WHERE " . implode(" AND ", array_map(fn($c) => "$c = ?", $cond));
+            if($orderBy) $q .= " ORDER BY $orderBy";
+            if($limit > 0) $q .= " LIMIT $limit";
+            if($offset > 0) $q .= " OFFSET $offset";
+        
+        } else if($type == QueryType::COUNT) {
+            $q = "SELECT COUNT(*) as count FROM " . $table;
             if(!empty($cond)) $q .= " WHERE " . implode(" AND ", array_map(fn($c) => "$c = ?", $cond));
         
         } else if($type == QueryType::INSERT) {
@@ -109,6 +117,10 @@ final class DataSlave {
         } else if($type == QueryType::UPDATE) {
             $q = "UPDATE " . $table . " SET " . implode(",", array_map(fn($c) => "$c = ?", $cols));
             $q .= " WHERE " . implode(" AND ", array_map(fn($c) => "$c = ?", $cond));
+        
+        } else if($type == QueryType::DELETE) {
+            $q = "DELETE FROM " . $table;
+            if(!empty($cond)) $q .= " WHERE " . implode(" AND ", array_map(fn($c) => "$c = ?", $cond));
         }
 
         return "$q;";
@@ -126,16 +138,24 @@ final class DataSlave {
      * 
      * @return array|bool|null The result of the query, or null if an error occurred.
      */
-    private function simpleRequestToDatabase(QueryType $type, string $query, array $vars = [], bool $fetchAll = false): array|bool|null {
+    private function simpleRequestToDatabase(QueryType $type, string $query, array $vars = [], bool $fetchAll = false): array|bool|int|null {
         $this->initializePDO();
 
         if($this->pdo) {
             $stmt = $this->pdo->prepare($query);
             $ok = $stmt->execute($vars);
-            if(!$ok) LogWorker::error("-SG- SQL Query was not successfull -> $query");
 
-            if($type == QueryType::SELECT) return ($fetchAll ? $stmt->fetchAll() : $stmt->fetch());
-            else if($type == QueryType::INSERT || $type == QueryType::UPDATE) return $ok;
+            if($ok) {
+                if($type == QueryType::SELECT) return ($fetchAll ? $stmt->fetchAll() : $stmt->fetch());
+                else if($type == QueryType::COUNT) return (int)$stmt->fetch()["count"];
+                else if($type == QueryType::DELETE) return $stmt->rowCount() > 0;
+                else if($type == QueryType::INSERT || $type == QueryType::UPDATE) return $ok;
+            } else {
+                LogWorker::error("-SG- SQL Query was not successfull -> $query");
+                if($type == QueryType::SELECT) return null;
+                else if($type == QueryType::COUNT) return 0;
+                else if($type == QueryType::INSERT || $type == QueryType::UPDATE || $type == QueryType::DELETE) return false;
+            }
         }
 
         return null;
@@ -172,8 +192,8 @@ final class DataSlave {
      * 
      * @return array|null The retrieved data, or null if an error occurred.
      */
-    public function getAll(string $table, array $cols, array $cond, array $vars): ?array {
-        $query = $this->buildQuery(QueryType::SELECT, $table, $cols, $cond);
+    public function getAll(string $table, array $cols, array $cond, array $vars, string $orderBy = "", int $limit = 0, int $offset = 0): ?array {
+        $query = $this->buildQuery(QueryType::SELECT, $table, $cols, $cond, $orderBy, $limit, $offset);
         return $this->simpleRequestToDatabase(QueryType::SELECT, $query, $vars, true);
     }
 
@@ -191,9 +211,20 @@ final class DataSlave {
         return $this->simpleRequestToDatabase(QueryType::INSERT, $query, $values);
     }
 
+    /**
+     * Gets the ID of the last inserted row.
+     *
+     * @return int|null The last insert ID, or null if an error occurred.
+     */
+    public function getLastInsertId(): ?int {
+        $this->initializePDO();
+        if($this->pdo) return (int)$this->pdo->lastInsertId();
+        
+        return null;
+    }
 
     /**
-     * Updates existing rows in the database.
+     * Inserts multiple rows into the database in a single transaction.
      *
      * @param string $table The table to update rows in.
      * @param array $cols The columns to update.
@@ -205,6 +236,73 @@ final class DataSlave {
     public function update(string $table, array $cols, array $cond, array $vars): bool {
         $query = $this->buildQuery(QueryType::UPDATE, $table, $cols, $cond);
         return $this->simpleRequestToDatabase(QueryType::UPDATE, $query, $vars);
+    }
+
+    /**
+     * Deletes rows from the database that match the given conditions.
+     *
+     * @param string $table The table to delete rows from.
+     * @param array $cond The conditions to filter the rows to delete.
+     * @param array $vars The variables to bind to the query.
+     * 
+     * @return bool True if the deletion was successful, false otherwise.
+     */
+    public function delete(string $table, array $cond, array $vars): bool {
+        $query = $this->buildQuery(QueryType::DELETE, $table, [], $cond);
+        return $this->simpleRequestToDatabase(QueryType::DELETE, $query, $vars);
+    }
+
+    /**
+     * Counts rows in the database that match the given conditions.
+     *
+     * @param string $table The table to count rows from.
+     * @param array $cond The conditions to filter the rows to count.
+     * @param array $vars The variables to bind to the query.
+     * 
+     * @return int The number of rows that match the conditions.
+     */
+    public function count(string $table, array $cond, array $vars): int {
+        $query = $this->buildQuery(QueryType::COUNT, $table, [], $cond);
+        return $this->simpleRequestToDatabase(QueryType::COUNT, $query, $vars) ?? 0;
+    }
+
+    /**
+     * Inserts multiple rows into the database in a single transaction.
+     *
+     * @param string $table The table to insert into.
+     * @param array $cols The columns to insert data into.
+     * @param array $valuesArray Array of value arrays to insert.
+     * 
+     * @return bool True if all insertions were successful, false otherwise.
+     */
+    public function insertBatch(string $table, array $cols, array $valuesArray): bool {
+        $this->initializePDO();
+
+        if($this->pdo) {
+            try {
+                $this->pdo->beginTransaction();
+                $query = $this->buildQuery(QueryType::INSERT, $table, $cols);
+                $stmt = $this->pdo->prepare($query);
+
+                foreach($valuesArray as $values) {
+                    $ok = $stmt->execute($values);
+                    if(!$ok) {
+                        $this->pdo->rollBack();
+                        LogWorker::error("-SG- Batch insert failed -> $query");
+                        return false;
+                    }
+                }
+
+                $this->pdo->commit();
+                return true;
+            } catch (\PDOException $e) {
+                if($this->pdo->inTransaction()) $this->pdo->rollBack();
+                LogWorker::error("-SG- PDOException during batch insert: ".$e->getMessage());
+                return false;
+            }
+        }
+
+        return false;
     }
 
     #/ METHODS
